# split-key-gen

./: Cargo.toml
src/: main.rs
